vyre-macros/tests/ui/derive_laws_unknown_attribute.stderr
error: unknown vyre() argument; expected `laws = [..]`
 --> tests/ui/derive_laws_unknown_attribute.rs:4:8
  |
4 | #[vyre(rulebook = [Commutative])]
  |        ^^^^^^^^
